[gd_scene load_steps=3 format=3 uid="uid://p5c05u7yiwij"]

[ext_resource type="Script" uid="uid://d0nk10l8vv8au" path="res://Manager/connection_manager.gd" id="1_so4ce"]
[ext_resource type="Script" uid="uid://b6fewlw5bpykm" path="res://Bnet/BnetSocket.cs" id="2_ofxgg"]

[node name="ConnectionManager" type="Node"]
script = ExtResource("1_so4ce")

[node name="BnetSocket" type="Node" parent="."]
script = ExtResource("2_ofxgg")
metadata/_custom_type_script = "uid://b6fewlw5bpykm"

[node name="PingTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="ConnectionStatusChanged" from="BnetSocket" to="." method="_on_bnet_socket_connection_status_changed"]
[connection signal="MessageReceived" from="BnetSocket" to="." method="_on_bnet_socket_message_received"]
[connection signal="timeout" from="PingTimer" to="." method="_on_ping_timer_timeout"]
